[project]
name = "customer-support"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentevals==0.0.4rc1",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.20",
    "langchain-google-genai>=2.1.0",
    "langgraph>=0.3.16",
    "langgraph-supervisor>=0.0.10",
    "langgraph-swarm>=0.0.7",
    "langsmith[pytest]>=0.3.17",
    "openai>=1.66.5",
    "pandas>=2.2.3",
]
